feat: add simple colorscheme

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,7 @@ project(duck)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_EXPORT_COMPILE_COMMANDS true)
-find_package(PkgConfig)
-
+find_package(Boost REQUIRED COMPONENTS process)
 set(CMAKE_BUILD_TYPE Debug)
 
 include(FetchContent)
@@ -15,13 +14,17 @@ FetchContent_Declare(
   GIT_TAG v6.1.9)
 FetchContent_MakeAvailable(ftxui)
 
-add_executable(duck src/main.cpp src/ui.cpp src/filemanager.cpp
-                    src/inputhandler.cpp src/contentprovider.cpp src/duck.cpp)
+add_executable(
+  duck
+  src/main.cpp
+  src/ui.cpp
+  src/filemanager.cpp
+  src/inputhandler.cpp
+  src/contentprovider.cpp
+  src/duck.cpp
+  src/colorscheme.cpp)
 
 target_include_directories(duck PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-target_link_libraries(
-  duck
-  PRIVATE ftxui::screen
-  PRIVATE ftxui::dom
-  PRIVATE ftxui::component)
+target_link_libraries(duck PRIVATE ftxui::screen ftxui::dom ftxui::component
+                                   Boost::process)
