feat: add stdexec scheduelr

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,17 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS true)
 
+include(cmake/CPM.cmake)
+cpmaddpackage(
+  NAME
+  stdexec
+  GITHUB_REPOSITORY
+  NVIDIA/stdexec
+  GIT_TAG
+  main
+  OPTIONS
+  "STDEXEC_BUILD_EXAMPLES OFF")
+
 find_package(Boost REQUIRED COMPONENTS process)
 set(CMAKE_BUILD_TYPE Debug)
 
@@ -26,7 +37,8 @@ add_executable(
   src/duck.inputhandler.cpp
   src/duck.contentprovider.cpp
   src/duck.core.cpp
-  src/duck.colorscheme.cpp)
+  src/duck.colorscheme.cpp
+  src/duck.scheduler.cpp)
 target_include_directories(duck PRIVATE module)
 target_sources(
   duck
@@ -40,9 +52,12 @@ target_sources(
          module/duck.filemanager.cppm
          module/duck.inputhandler.cppm
          module/duck.colorscheme.cppm
-         module/duck.contentprovider.cppm)
+         module/duck.contentprovider.cppm
+         module/duck.scheduler.cppm)
 
 target_compile_features(duck PUBLIC cxx_std_23)
 
 target_link_libraries(duck PRIVATE ftxui::screen ftxui::component ftxui::dom
                                    Boost::process)
+
+target_link_libraries(duck PRIVATE STDEXEC::stdexec)
